fix(ai-sse): prevent global ticker starvation across streams
The SSE controller used a single shared scheduled ticker thread for all active
AI content streams. Under concurrent load, one slow emitter send could delay
queue-position and keepalive ticks for unrelated streams, which risks keepalive
gaps and dropped long-lived connections.

This fixes the bottleneck by moving ticker scheduling to a bounded multi-thread
scheduled pool, so one contended stream no longer blocks periodic events for all
other clients. The test suite now asserts this concurrency contract explicitly.

- Replace `newSingleThreadScheduledExecutor` with `newScheduledThreadPool(...)`
- Use daemon platform threads with stable naming prefix `book-ai-queue-ticker-`
- Add bounded thread sizing via `determineQueueTickerThreadCount()` (`min=4`, `max=16`)
- Keep existing lifecycle behavior by retaining `shutdownNow()` in `@PreDestroy`
- Add controller test verifying ticker executor is multi-threaded (`corePoolSize > 1`)
  and aligned with controller sizing logic